# gsm_gsql

./: .gitignore  .gitmodules  AUTHORS  AtomizingPipeline2.cpp  AtomizingPipeline2.h  CMakeCache.txt  CMakeLists.txt  GSMIso.cpp  GSMIso.h  GSMPatternVisitor.cpp  GSMPatternVisitor.h  GraphEdgeMatchTable.cpp  GraphEdgeMatchTable.h  README.md  SimpleTable.cpp  SimpleTable.h  TODO.md  TODO:  antlr4_gen.sh  bench.csv  classifier.py  data.cpp  gsm_example.yaml  input.txt  main.cpp  out.csv  patterns.txt  patterns.txt_debug_edge_matching.txt  patterns3.txt  patterns3bis.txt  patterns_no_update.txt  pom.xml  result.dot  scalability.csv  scalability_dist.csv  simple.csv  t.dot  test_pydatagramdb.sh  tipuslangus.txt  yaml-to-gsm.py
.github/workflows/: cmake.yml
DatagramDB/: CMakeLists.txt  pyproject.toml  python.cpp
DatagramDB/examples/: bulk_insertion_test.py  gsm_format_write_and_read.py  hierarchy_degradation.py
DatagramDB/python/src/PyDatagramDB/: DatagramDB.py  Origs.py  Transformation.py  __init__.py  hierarchy.py
DatagramDB/python/src/PyDatagramDB/editable/: SimpleObjectDatabase.py
DatagramDB/python/src/PyDatagramDB/gsm/: RandomAccessReader.py  __init__.py  gsm_read.py  gsm_write.py  loaders.py
DatagramDB/python/src/PyDatagramDB/gsm_wrappers/: Contents.py  GSMObject.py  MainMemoryBuilder.py  Properties.py
antlr4/: simple_graph_grammar.g4  simple_graph_grammar.interp  simple_graph_grammar.tokens  simple_graph_grammarBaseListener.h  simple_graph_grammarBaseVisitor.cpp  simple_graph_grammarBaseVisitor.h  simple_graph_grammarLexer.cpp  simple_graph_grammarLexer.h  simple_graph_grammarLexer.interp  simple_graph_grammarListener.cpp  simple_graph_grammarListener.h  simple_graph_grammarParser.cpp  simple_graph_grammarParser.h  simple_graph_grammarVisitor.h
antlr4/graph_grammar/: simple_graph_grammar.g4  simple_graph_grammar.interp  simple_graph_grammar.tokens  simple_graph_grammarBaseListener.cpp  simple_graph_grammarBaseListener.h  simple_graph_grammarBaseVisitor.cpp  simple_graph_grammarBaseVisitor.h  simple_graph_grammarLexer.cpp  simple_graph_grammarLexer.h  simple_graph_grammarLexer.interp  simple_graph_grammarLexer.tokens  simple_graph_grammarListener.cpp  simple_graph_grammarListener.h  simple_graph_grammarParser.cpp  simple_graph_grammarParser.h  simple_graph_grammarVisitor.cpp  simple_graph_grammarVisitor.h
antlr4/schema_language/: schema.g4  schema.interp  schema.tokens  schemaBaseListener.cpp  schemaBaseListener.h  schemaBaseVisitor.cpp  schemaBaseVisitor.h  schemaLexer.cpp  schemaLexer.h  schemaLexer.interp  schemaListener.cpp  schemaListener.h  schemaParser.cpp  schemaParser.h  schemaVisitor.cpp  schemaVisitor.h
antlr4/script/: script.g4
antlr4/scriptv2/: script.g4  script.interp  scriptBaseListener.cpp  scriptBaseListener.h  scriptBaseVisitor.cpp  scriptBaseVisitor.h  scriptLexer.cpp  scriptLexer.h  scriptLexer.interp  scriptLexer.tokens  scriptListener.cpp  scriptListener.h  scriptParser.cpp  scriptParser.h  scriptVisitor.cpp  scriptVisitor.h
cpp/: field.spe  fixed_arity.spe  fixed_data.spe  native.json  offset.spe  outputsize_init.spe  outputsize_return.spe  primary.spe  secondary.spe  secondaryfield.spe  serialize_vector(mutable).spe  string_arity.spe  string_data.spe  trailing.spe  vector_arity.spe  vector_foreach.spe  writefixed.spe  writefixed_nosize.spe
data/: einstein.txt  einstein.txt_out_1.dot  gsm_example.yaml.gsm  text_visio.txt  thecat.txt
data/json_files/: example3.json
data/queries/: patterns.txt  patterns3.txt  patterns3penta.txt  patterns3quater.txt  patterns3ter.txt  patterns_orig.txt
data/script/: script_01.txt  script_02.txt  script_03.txt  script_04.txt  script_05.txt  script_06.txt  script_07.txt  script_08.txt  script_09.txt  script_10.txt  script_11.txt
data/test/: einstein_expected.txt
data/tests/: removing_root.yaml  removing_root.yaml.gsm  removing_root.yaml.gsm_out_1.dot  removing_root2.yaml  removing_root2.yaml.gsm
datagramdb-visualizer/: AUTHORS  configuration.properties  pom.xml
datagramdb-visualizer/antlr4/: datagramql.g4
doc/: script2.html  scriptv3.html  simple_graph_grammar.html
exportToHTML/: simple_graph_grammar.g4.html
generators/: Makefile  cpp_gen.cpp  cpp_gen.h  json.hpp  out  test.c
include/: ActivityTable.h  AttributeTable.h  DataQuery.h  LinearGSM.h  PhiTable.h  PollMap.h  SimplifiedFuzzyStringMatching.h  gsm_indices.h  parsing.h  result.h  simple_pair_hash.h
include/configuration/: Configuration.h  Environment.h  Serialisation.h  base.h
include/database/: ActivityTable.h  AtomizingPipeline2.h  AttributeTable.h  GSMIso.h  GSMPatternVisitor.h  GraphEdgeMatchTable.h  IntermediateView.h  LinearGSM.h  PhiTable.h  SchemaIndexer.h  SimpleTable.h  delta_updates.h  (+7 more)
json_files/: example2.json
json_schema/: GSM.schema.json  GSMSchema.java  gsm_python.py
neo4j_benchmark/: README.md  pom.xml  results.csv  results_backup.csv  temp.json  tempSentence.json
python/: classifier.py  viterbi.py
script_ver/: CMakeLists.txt  antlr4_gen.sh  main.cpp
script_ver/antlr4/cpp/antlr4/script/: script.interp  scriptBaseListener.cpp  scriptBaseListener.h  scriptBaseVisitor.cpp  scriptBaseVisitor.h  scriptLexer.cpp  scriptParser.cpp  scriptParser.h
script_ver/include/gsql_gsm/: dump_to_xml.h  gsm_db_indices.h  gsm_inmemory_db.h  gsm_object.h  gsm_object_xi_content.h  gsm_transformation_operators.h  gsql_operators.h
script_ver/include/gsql_gsm/script_1/: Funzione.h  Javification.h  ScriptAST.h  ScriptVisitor.h  SerializableFunction.h  java_types.h
script_ver/src/gsql_gsm/: dump_to_xml.cpp  gsm_db_indices.cpp  gsm_object_xi_content.cpp
script_ver/src/gsql_gsm/script_1/: ScriptAST.cpp
script_ver/src/tests/: script_runs.cpp
src/: ActivityTable.cpp  AttributeTable.cpp  DataQuery.cpp  IntermediateView.cpp  LinearGSM.cpp  PhiTable.cpp  SimplifiedFuzzyStringMatching.cpp  gsm_indices.cpp  gsm_object_xi_content.cpp  result.cpp
structuredTypetest/: as.tau  natives.t
typetest/: input.txt  typeslang.txt
viz/: main.py  network_builder.js  network_style.css  requirements.txt  tables.css  test.html
(+430 files in other folders)
