[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "PyDatagramDB"
version = "0.0.2"
dependencies = ["networkx==3.4.1","pandas==2.2.3"]


[tool.scikit-build]
wheel.packages = ["python/src/PyDatagramDB"]
cmake.build-type = "Release"
